@@ -10,8 +10,11 @@ import org.apache.commons.collections.comparators.ComparatorChain;
 import org.apache.commons.lang.NotImplementedException;
 import org.apache.commons.lang3.ArrayUtils;
 import org.apache.commons.lang3.tuple.Pair;
+import org.apache.lucene.analysis.StopAnalyzer;
+import org.apache.lucene.analysis.standard.StandardAnalyzer;
 import org.apache.lucene.search.Sort;
 import org.apache.lucene.search.SortField;
+import org.apache.lucene.util.Version;
 import org.hibernate.annotations.OrderBy;
 import org.hibernate.search.FullTextQuery;
 import org.hibernate.search.FullTextSession;
